--- a/report/TermThreeProject.bib
+++ b/report/TermThreeProject.bib
@@ -76,3 +76,10 @@
   day          = 29,
   url          = "https://www.emcstandards.co.uk/files/part_4_planes_corrected_29_june_17.pdf"
 }
+@online{2017Arduino,
+    author = {sastorer},
+    title = "{Arduino Uno - C++ 11 STD Library - \#2 by system - Installation \& Troubleshooting - Arduino Forum}",
+    year = 2017,
+    url = {https://forum.arduino.cc/t/arduino-uno-c-11-std-library/468141/2},
+    urldate = {2021-08-27}
+}
