--- a/report/TermThreeProject.tex
+++ b/report/TermThreeProject.tex
@@ -3,7 +3,7 @@
 \usepackage{textcomp, gensymb, amsmath, mathtools, siunitx, unicode-math}
 % Page layout
 \usepackage[a4paper, margin=20mm, headheight=12.0pt]{geometry}
-\usepackage{fancyhdr, multicol, graphicx, caption, tabu, longtable, float, booktabs, tabularx, listings, xcolor, pdfpages, subcaption, titling, titlesec, enumitem, url, currency, pdflscape, ltxtable}
+\usepackage{fancyhdr, multicol, graphicx, caption, tabu, longtable, float, booktabs, tabularx, listings, xcolor, pdfpages, subcaption, titling, titlesec, enumitem, url, currency, pdflscape, relsize}
 \usepackage[toc,page]{appendix}
 \usepackage[style=ieee, backend=biber]{biblatex}
 \usepackage[thinc]{esdiff}
@@ -26,6 +26,9 @@
         keywordstyle=\color{listingblue},
         commentstyle=\color{grey},
         captionpos=b}
+
+% Typeset C++
+\newcommand\CC{C\nolinebreak[4]\hspace{-.05em}\raisebox{.4ex}{\relsize{-3}{\textbf{++}}}}
 
 % Maths formatting
 \newcommand\ddfrac[2]{\frac{\displaystyle #1}{\displaystyle #2}}
@@ -137,7 +140,6 @@
     \end{figure}
 
     \subsection{Arduino Shield}
-        \paragraph{}
         A load cell is used to measure the force of the head rotation, which has an internal Wheatstone bridge. The output from the Wheatstone bridge goes into an instrumentation amplifier. The instrumentation amplifier consists of non-inverting amplifiers on the output of the Wheatstone bridge, which then goes into a differential amplifier, as shown in figure \ref{fig:inamp}. The output of the differential amplifier goes into an LC low pass filter to remove high-frequency noise.
         \noindent
         \begin{figure}[H]
@@ -164,11 +166,9 @@
         \end{figure}
 
         \subsubsection{PCB Layout}
-        \paragraph{}
         The PCB was laid out to ensure that the ground plane would have no cuts, maximising EMC performance. Decoupling capacitors were placed right next to the power pins of the ICs. Additional care was taken so that traces were not too close to any antipads, as having traces too close to antipads can worsen EMC \cite{emc}. Test points were added so that we can troubleshoot any problems when assembling the prototype. 1x1 header were used as ground test points so that the ground clip of the oscilloscope probe can be attached.
 
         \subsubsection{Amplifier}
-        \paragraph{}
         An instrumentation amplifier was chosen to amplify the signal from the load cell. The instrumentation amplifier consists of two non-inverting amplifiers, of which the outputs go into a differential amplifier. As the Arduino cannot read negative voltages, nor is there a negative supply, the differential amplifier was biased with \SI{2.5}{\volt}. This results in the positive difference being between \SI{2.5}{\volt} and \SI{5}{\volt}, and the negative difference is between \SI{0}{\volt} and \SI{2.5}{\volt}. A one op-amp differential amplifier has an extremely low input impedance; thus the Wheatstone bridge must have a matched impedance. A two op-amp instrumentation amplifier would require one less package but would be less stable than the three op-amp instrumentation amplifier. The three op-amp instrumentation amplifier also has a spare op-amp which is then utilised for the voltage reference.
 
         An initial gain of \SI{24}{\ohm} was calculated (as shown in equation \eqref{eq:g4}) \cite{ti:sloa034}, but after some test on a breadboard, the gain was changed \SI{33}{\ohm}. This was partly due to the load cell to measure \SI{\sim 50}{\percent} more than rated \cite{htc:tal221}.
@@ -180,11 +180,9 @@
         \end{align}
 
         \subsubsection{Voltage reference}
-        \paragraph{}
         A voltage divider was used to produce \SI{2.5}{\volt} to bias the differential amplifier. It was decided to use a buffer on the output of the voltage divider so that the common-mode rejection error is minimised. This is due to the op-amp's low output impedance, which does not introduce any noticeable common-mode rejection error. A \SI{2.5}{\volt} Zener diode would have been preferred. The resistors in the voltage divider have tolerances and therefore may not give exactly \SI{2.5}{\volt}; however, \SI{2.5}{\volt} Zener diodes were not available from the store. \SI{1}{\mega\ohm} resistors were chosen to limit the current and thus power consumption.
 
         \subsubsection{Filter}
-        \paragraph{}
         A filter was used to filter out high-frequency noise from the load cell. The filter was chosen to be an LC filter. An RC filter could have been used, but it would have caused the signal's voltage to drop slightly due to the voltage drop across the resistor. The LC filter does require more space on the PCB, but the PCB had enough room for the capacitor and the inductor. LC filters also have better attenuation as the attenuation slope is twice as steep as an RC filter. The filter was placed on the output of the differential amplifier. If filters were placed on the inputs of the differential op-amp, more components would be needed, and there would not be enough space on the board. A \SI{22}{\micro\henry} inductor was chosen due to its availability in the electronics store. A \SI{470}{\micro\farad} capacitor was selected as a compromise of its physical size, cutoff frequency, and availability. The cutoff frequency was found to be \SI{1.595}{\kilo\hertz}, as shown below:
         \begin{align}
             f &= \ddfrac{1}{2 \pi \sqrt{L C}} \label{eq:f1}\\
@@ -193,24 +191,22 @@
         \end{align}
 
         \subsubsection{LED arrays}
-        \paragraph{}
         Each LED array has a MOSFET; this was done to have enough current supplied to the LEDs. The pins that can output PWM are only able to supply \SI{40}{\milli\amp}, so the outputs from these pins were connected to the gates of the MOSFETs. This allows the LEDs to take full current and are thus brighter. IRF740 MOSFETs were chosen due to their availability in the store and their low resistance. They have a max current of 10 A, so more LEDs can be added if required. The low resistance of the IRF740 (\SI{0.55}{\ohm}), reduces the power losses when the MOSFET is on. Individual resistors could have been matched to each LED; however, this would increase the number of components and take up extra space on the PCB. \SI{100}{\ohm} resistors were placed between the PWM output from the Arduino and the gate of the MOSFETs, this was done to minimise ringing and to limit current.
 
     \subsection{Microcontroller Overview}
-        \paragraph{}
-        The microcontroller selected for the HeadLight prototype was the Arduino Uno Rev 3. The Arduino Uno provides many advantages over other options. Mainly, it provides a simple interface, through C++ libraries, for accessing core hardware facilities and corresponding functionality, such as GPIO and PWM manipulation. The HeadLight design makes extensive use of both GPIO pins and PWM output, therefore having the ability to access and manipulate these rapidly is important to expedite the early prototyping stages. 
+        The microcontroller selected for the HeadLight prototype was the Arduino Uno Rev 3. The Arduino Uno provides many advantages over other options. Mainly, it provides a simple interface, through \CC{} libraries, for accessing core hardware facilities and corresponding functionality, such as GPIO and PWM manipulation. The HeadLight design makes extensive use of both GPIO pins and PWM output, therefore having the ability to access and manipulate these rapidly is important to expedite the early prototyping stages. 
 
-        We wrote the software for the Arduino in C as opposed to C++. C++ is the natural choice as the Arduino libraries are written in C++, and the source code is compiled as C++. Still, after analysing the advantages and disadvantages of each option, we decided that C was the better choice. The benefits of using C over C++ are as follows:
+        We wrote the software for the Arduino in C as opposed to \CC{}. \CC{} is the natural choice as the Arduino libraries are written in \CC{}, and the source code is compiled as \CC{}. Still, after analysing the advantages and disadvantages of each option, we decided that C was the better choice. The benefits of using C over \CC{} are as follows:
         \begin{itemize}
-            \item We collectively have more experience with C than C++, making collaboration easier and coding quicker.
-            \item The Arduino doesn't provide the C++ standard library (ref), as it uses too much dynamic memory.
+            \item We collectively have more experience with C than \CC{}, making collaboration easier and coding quicker.
+            \item The Arduino doesn't provide the \CC{} standard library \cite{2017Arduino}, as it uses too much dynamic memory.
             \item Software written in C is likely to be easier to port to another, more appropriate microcontroller if the product matures past the prototyping stage. 
         \end{itemize}
         There are disadvantages to this decision, which we took into due consideration:
         \begin{itemize}
-            \item In the way we would've written the code, C++ is easier to read to those without C/C++ experience. The primary advantage of C++ in this context is the use of the OOP paradigm through classes, encapsulation, and polymorphism. This programming style would be more similar to those with Python experience than the procedural style of C. 
-            \item There is some essential boilerplate required in the header files containing function prototypes. This boilerplate is a set of preprocessor directives that ensure the C++ linker doesn't mangle the function names. 
-            \item Following the previous point, C++ is a superset of C, meaning all C code is valid (if not best practice) C++ code. Unfortunately, this is not true in the other way. Therefore, to use C++ code in C, a linker library must be written, which requires significant work. Thus, the Arduino libraries that provide access to the GPIO pins and PWM functionality cannot be accessed in functions linked as C code. Consequently, we can only use the Arduino library functions within the \texttt{main.ino} file. 
+            \item In the way we would've written the code, \CC{} is easier to read to those without C/\CC{} experience. The primary advantage of \CC{} in this context is the use of the OOP paradigm through classes, encapsulation, and polymorphism. This programming style would be more similar to those with Python experience than the procedural style of C. 
+            \item There is some essential boilerplate required in the header files containing function prototypes. This boilerplate is a set of preprocessor directives that ensure the \CC{} linker doesn't mangle the function names. 
+            \item Following the previous point, \CC{} is a superset of C, meaning all C code is valid (if not best practice) \CC{} code. Unfortunately, this is not true in the other way. Therefore, to use \CC{} code in C, a linker library must be written, which requires significant work. Thus, the Arduino libraries that provide access to the GPIO pins and PWM functionality cannot be accessed in functions linked as C code. Consequently, we can only use the Arduino library functions within the \texttt{main.ino} file. 
         \end{itemize}
 
         \subsubsection{Software Functionality}
@@ -225,18 +221,18 @@
             A high-level overview of the loop that the Arduino runs through is as follows:
             \begin{itemize}
                 \item Get the current button reading and debounce it: 
-                \item \begin{itemize}
-                        \item Update the mode if it is determined the user pressed the button
-                    \end{itemize}
+                \begin{itemize}
+                    \item Update the mode if it is determined the user pressed the button
+                \end{itemize}
                 \item Check if that either are true:
-                \item \begin{itemize}
-                        \item Poll the load cell and check if it has detected a deviation of at least \SI{0.1}{\volt}. 
-                        \item Check if the mode has changed this loop. 
-                        \item If either of these is true:
-                        \item \begin{itemize}
-                            \item Calculate and update the PWM outputs of the two LED arrays.
-                        \end{itemize}
+                \begin{itemize}
+                    \item Poll the load cell and check if it has detected a deviation of at least \SI{0.1}{\volt}. 
+                    \item Check if the mode has changed this loop. 
+                    \item If either of these is true:
+                    \begin{itemize}
+                        \item Calculate and update the PWM outputs of the two LED arrays.
                     \end{itemize}
+                \end{itemize}
                 \item Stop execution for \SI{20}{\milli\second} to reduce power usage while maintaining a high polling rate to detect button presses and rapid head movements.
             \end{itemize}
             A complete code listing can be found in Appendix \ref{appendix:listing}.
@@ -284,13 +280,12 @@ button->last_state = read_button_state;
     The load cell signal will be probed to ensure that the gain resistor is the correct value. This will be done by placing an appropriately \SI{100}{\gram} mass on the load cell and measuring the voltage that is output by the instrumentation amplifier.
 
 \section{Conclusion}
-    \paragraph{}
     This report detailed the prototyping process undertaken to test the feasibility of the HeadLight concept. We achieved our goal of developing a medium-fidelity prototype which allowed us to demonstrate the functionality of HeadLight. The prototype developed contained six distinct parts, as shown in the block diagram \ref{fig:block}. All the parts work together to implement the required functionality as well as the additional mode functionality. The load cell output first goes through an amplification and conditioning stage, which involves an instrumental amplifier and filtering section and takes place on the shield. The modified signal then enters the Arduino through a GPIO pin. The Arduino then determines if sufficient deviation has been detected to alter the PWM outputs. These outputs enter the gates of MOSFETs, which 'amplifies' the current received by the LED arrays. This general loop is what could be expected from a final product. The startup's design team has indicated that they know that the Arduino Microcontroller is not suitable long term for this project but is very applicable during the prototyping process. 
 
     Developing this prototype provided many insights into the advantages and disadvantages of design decisions set by the specifications, specifically related to the load cell. Although we didn't house the prototype in a helmet enclosure, we have concerns about using a load cell to detect head movement. Although the load cell could be attached to the helmet in such a way as to produce a reliable reading for purely horizontal deviation, we are worried that vertical head deviation could have unintended consequences. Therefore, if we undertook future prototyping, we would recommend switching to a gyroscope and accelerometers to attain head movement. This would provide more accurate, precise readings and more relevantly isolate movement on a specific axis. 
 
     Overall, we also have concerns about the ability of HeadLight to offer any appealing additional functionality. Further testing within context would have to be undertaken by stakeholders to establish if the HeadLight in its current form provides any significant advantage over a standard headlight.
-    
+
 \newpage
 % Bibliography
 \printbibliography
