--- a/report/TermThreeProject.tex
+++ b/report/TermThreeProject.tex
@@ -116,6 +116,7 @@
 \fancyfoot[C]{Edward Manson \& Alex Stiles}
 
 \section{Introduction}
+    Cyclists often use lights for nighttime bicycle rides. These lights may be fixed to the bicycle or may not illuminate where the rider wishes. A light that illuminates in a direction based on the force applied to a load cell was designed using a microcontroller. When the rider turns their head, the brightness of one LED array increases and the brightness of the other decreases. An Arduino shield printed circuit board (PCB) was designed, and software for the Arduino was written.
 
 \section{Background}
     \noindent
