--- a/report/TermThreeProject.tex
+++ b/report/TermThreeProject.tex
@@ -20,7 +20,6 @@
 \lstset{language=C++,
         basicstyle=\small\ttfamily,
         numberstyle=\ttfamily,
-        numbers=left,
         breaklines=true,
         tabsize=4,
         keywordstyle=\color{listingblue},
@@ -351,18 +350,18 @@ right_group_brightness = (255 - group_one_brightness);
 
     \section{Code}
         \label{appendix:listing}
-        \lstinputlisting[caption=Button code., label=Listing:1, escapechar=|]{../main/button_COMMENT.c}
-        \lstinputlisting[caption=Button header code., label=Listing:2]{../main/button.h}
-        \lstinputlisting[caption=LED group code., label=Listing:3]{../main/LED_Group.c}
-        \lstinputlisting[caption=LED group header code., label=Listing:4]{../main/LED_Group.h}
-        \lstinputlisting[caption=.LED group collection code, label=Listing:5]{../main/LED_Group_Collection.c}
-        \lstinputlisting[caption=LED group collection header code., label=Listing:6]{../main/LED_Group_Collection.h}
-        \lstinputlisting[caption=Load cell code., label=Listing:7]{../main/Load_Cell.c}
-        \lstinputlisting[caption=Load cell code., label=Listing:8]{../main/Load_Cell.h}
-        \lstinputlisting[caption=Main code., label=Listing:9]{../main/main.c}
-        \lstinputlisting[caption=Voltage ADC code., label=Listing:10]{../main/voltage.c}
-        \lstinputlisting[caption=Voltage ADC header code., label=Listing:11, captionpos=b]{../main/voltage.h}
-        \lstinputlisting[caption=Main Arduino code., label=Listing:main, captionpos=b]{../main/main.ino}
+        \lstinputlisting[caption=Button code., numbers=left, label=Listing:1, escapechar=|]{../main/button_COMMENT.c}
+        \lstinputlisting[caption=Button header code., numbers=left, label=Listing:2]{../main/button.h}
+        \lstinputlisting[caption=LED group code., numbers=left, label=Listing:3]{../main/LED_Group.c}
+        \lstinputlisting[caption=LED group header code., numbers=left, label=Listing:4]{../main/LED_Group.h}
+        \lstinputlisting[caption=.LED group collection code., numbers=left, label=Listing:5]{../main/LED_Group_Collection.c}
+        \lstinputlisting[caption=LED group collection header code., numbers=left, label=Listing:6]{../main/LED_Group_Collection.h}
+        \lstinputlisting[caption=Load cell code., numbers=left, label=Listing:7]{../main/Load_Cell.c}
+        \lstinputlisting[caption=Load cell code., numbers=left, label=Listing:8]{../main/Load_Cell.h}
+        \lstinputlisting[caption=Main code., numbers=left, label=Listing:9]{../main/main.c}
+        \lstinputlisting[caption=Voltage ADC code., numbers=left, label=Listing:10]{../main/voltage.c}
+        \lstinputlisting[caption=Voltage ADC header code., numbers=left, label=Listing:11, captionpos=b]{../main/voltage.h}
+        \lstinputlisting[caption=Main Arduino code., numbers=left, label=Listing:main, captionpos=b]{../main/main.ino}
     \newpage
     \section{Schematic}
         \label{appendix:schematic}
